Combined two region search versions (assembly vs. no assembly dropdown) into one, with new boolean in web.properties to decide whether to use assembly filter. Also other small updates/syncing files.

--- a/webapp/src/main/webapp/WEB-INF/web.properties
+++ b/webapp/src/main/webapp/WEB-INF/web.properties
@@ -40,7 +40,7 @@ meta.keywords = genomics, genetics
 meta.description = <DESCRIPTION HERE>
 
 #theme used (themes in intermine/webapp/main/resources/webapp/themes/)
-theme = minename-theme
+theme = mine-theme
 
 # galaxy
 ## set to "false" to disable galaxy
@@ -107,6 +107,8 @@ genomicRegionSearch.optionsJavascript =
 genomicRegionSearch.resultsJavascript =
 genomicRegionSearch.optionsCss =
 genomicRegionSearch.resultsCss =
+# Whether to include assembly version in region search
+genomicRegionSearch.useAssemblyFilter = false
 # Make sure pre-defined organisms have chromosome location information in the database
 genomicRegionSearch.defaultOrganisms = <DEFAULT SHORT NAME HERE>
 # Exclude feature types for all organisms, comma separated
@@ -118,6 +120,10 @@ genomicRegionSearch.exampleSpansFormat1 = LG1:4973300..4990880\\nLG1:6704800..67
 genomicRegionSearch.exampleSpansFormat2 = LG1:4973300-4990880\\nLG1:6704800-6726950\\nLG3:5078530-5082200
 genomicRegionSearch.exampleSpansFormat3 = LG1  4973300   4990880\\nLG1    6704800   6726950\\nLG3    5078530       5082200
 genomicRegionSearch.exampleOrganism = <DEFAULT SHORT NAME HERE>
+# Leave example assembly blank if not using assembly dropdown
+genomicRegionSearch.exampleAssembly =
+# for organism dropdown, true = use full names, false = use short names (default option)
+genomicRegionSearch.useFullOrgNames = false
 
 genomicRegionSearch.caption = Search for features that overlap a list of genome coordinates you enter or upload, e.g. \
 <b>chr1:29733..37349</b><br><br><b>Warning:</b> After running your search, using your browser back key to revise the \
