--- a/webapp/src/main/webapp/WEB-INF/web.properties
+++ b/webapp/src/main/webapp/WEB-INF/web.properties
@@ -23,6 +23,9 @@ attributelink.uniProt.Protein.*.uniprotAccession.url=http://www.uniprot.org/unip
 attributelink.uniProt.Protein.*.uniprotAccession.text=uniprot: <<attributeValue>>
 attributelink.uniProt.Protein.*.uniprotAccession.imageName=uniprot_logo_link.jpeg
 
+attributelink.NCBI.Gene.*.primaryIdentifier.url=http://www.ncbi.nlm.nih.gov/gene/?term=<<attributeValue>>
+attributelink.NCBI.Gene.*.primaryIdentifier.text=NCBI: <<attributeValue>>
+
 # Header - these will populate the top right navigation
 #header.links=help,FAQ,about,cite,software
 #header.links.FAQ=http://trac.flymine.org/wiki/FlyMineFAQ
