Added excluded classes to web.properties

--- a/webapp/src/main/webapp/WEB-INF/web.properties
+++ b/webapp/src/main/webapp/WEB-INF/web.properties
@@ -115,7 +115,7 @@ genomicRegionSearch.useAssemblyFilter = false
 # Make sure pre-defined organisms have chromosome location information in the database
 genomicRegionSearch.defaultOrganisms = <DEFAULT SHORT NAME HERE>
 # Exclude feature types for all organisms, comma separated
-#genomicRegionSearch.featureTypesExcluded.global = YouNameItClass
+genomicRegionSearch.featureTypesExcluded.global = CodingSequence, Polypeptide
 # Exclude feature types for each specific organism
 #genomicRegionSearch.featureTypesExcluded.byOrganism = P. falciparum 3D7:YouNameItClass;
 genomicRegionSearch.defaultSpans = LG1:4973300..4990880\\nLG1:6704800..6726950\\nLG3:5078530..5082200
