Removed some unnecessary files, added some definitions for field names, web properties, webconfig, etc.

--- a/webapp/src/main/webapp/WEB-INF/soClassName.properties
+++ b/webapp/src/main/webapp/WEB-INF/soClassName.properties
@@ -2029,6 +2029,7 @@ SplicingFeature splicing_feature
 SplicingRegulatoryRegion splicing_regulatory_region
 SplicingVariant splicing_variant
 Spot42RNA spot_42_RNA
+SRNA sRNA
 SsOligo ss_oligo
 SsRNAViralSequence ss_RNA_viral_sequence
 StRNAEncoding stRNA_encoding
