--- a/webapp/src/main/webapp/WEB-INF/web.properties
+++ b/webapp/src/main/webapp/WEB-INF/web.properties
@@ -158,6 +158,9 @@ genomicRegionSearch.enableStrandSpecificSearch = true
 
 layout.fixed = begin,template,templates,bag,customQuery,query,error,api,genomicRegionSearch,releaseUpdates
 
+# Whether to display logo next to mine name
+branding.images.displayLogo = true
 branding.images.logo = model/images/logo.png
+# These two settings below don't seem to be used, keeping for future reference:
 branding.colors.header.main = #357b8c
 branding.colors.header.text = #ffffff
