--- a/webapp/src/main/webapp/WEB-INF/bioFieldNames.properties
+++ b/webapp/src/main/webapp/WEB-INF/bioFieldNames.properties
@@ -1,12 +1,37 @@
+bioProjectId=Bio-Project Id
+bioSampleId=Bio-Sample Id
+bioSamplePools=Bio-Sample Pools
+bioSampleType=Bio-Sample Type
+breedLboID=Breed LBO Id
+btoAllLevels=BTO All Levels
+btoId=BTO Id
+btoName=BTO Name
+btoTopLevel=BTO Top Level
 cDNAClones=cDNA clones
 CDSs=CDSs
+cellTypeClId=Cell Type CL Id
+chipAntibody=ChIP Antibody
+cmoName=CMO Name
+cultureTypeBtoId=Culture Type BTO Id
 cvTerms=CV Terms
 cytoLocation=Cytological Location
+descriptionUberonId=Description UBERON Id
+developmentalStageEfoId=Developmental Stage EFO Id
+developmentalStageHsapdvId=Developmental Stage HSAPDV Id
+developmentalStageUberonId=Developmental Stage UBERON Id
 ecNumber=EC Number
+environmentalConditionsOwleolId=Environmental Conditions owlEOL Id
 exceptionNote=Exception
 genbankIdentifier=GenBank Identifier
 goAnnotation=GO Annotation
+healthStatusAtCollectionHpId=Health Status At Collection HP Id
+healthStatusAtCollectionPatoId=Health Status At Collection PATO Id
 isUniprotCanonical=Is UniProt Canonical
+lboId=LBO Id
+lodScore=LOD Score
+lsMeans=LS Means
+materialObiId=Material OBI Id
+materialUberonId=Material UBERON Id
 md5checksum=MD5 Checksum
 MicroarrayResults=Microarray Results
 mirnagene=miRNA Gene
@@ -17,14 +42,26 @@ mrna=mRNA
 mRNAExpressionResults=mRNA Expression Results
 mRNAExpressionTerms=mRNA Expression Terms
 ncbiGeneNumber=NCBI Gene Number
+organismPartUberonId=Organism Part UBERON Id
+organismPartUberonName=Organism Part UBERON Name
 pcrProduct=PCR Product
+physiologicalConditionOwlatolId=Physiological Condition owlATOL Id
+ptoName=PTO Name
 pubMedId=PubMed ID
 Pvalue=P-value
+qtlId=QTL Id
 rnaiResults=RNAi Results
 rnaiScreenHits=RNAi Screen Hits
+sexPatoId=Sex PATO Id
 SNPs=SNPs
+sraSample=SRA Sample
+sraSubmission=SRA Submission
+sraStudy=SRA Study
+submissionDescriptionUberonId=Submission Description UBERON Id
+synonymUberonId=Synonym UBERON Id
 TFmodule=TF module
 uniprotAccession=UniProt Accession
 uniprotName=UniProt Name
 url=URL
 UTRs=UTRs
+vtoName=VTO Name
