Updated web.properties to include extra external links on report pages, disable galaxy

--- a/webapp/src/main/webapp/WEB-INF/web.properties
+++ b/webapp/src/main/webapp/WEB-INF/web.properties
@@ -26,13 +26,25 @@ attributelink.uniProt.Protein.*.uniprotAccession.imageName=uniprot_logo_link.jpe
 attributelink.NCBI.Gene.*.primaryIdentifier.url=http://www.ncbi.nlm.nih.gov/gene/?term=<<attributeValue>>
 attributelink.NCBI.Gene.*.primaryIdentifier.text=NCBI: <<attributeValue>>
 
+attributelink.NCBI.Transcript.*.primaryIdentifier.url=http://www.ncbi.nlm.nih.gov/nuccore/<<attributeValue>>
+attributelink.NCBI.Transcript.*.primaryIdentifier.text=NCBI: <<attributeValue>>
+
+attributelink.miRBase.MiRNA.*.primaryIdentifier.url=http://www.mirbase.org/cgi-bin/mirna_entry.pl?acc=<<attributeValue>>
+attributelink.miRBase.MiRNA.*.primaryIdentifier.text=miRBase: <<attributeValue>>
+
+attributelink.flybase.Gene.7227.primaryIdentifier.url=http://www.flybase.org/.bin/fbidq.html?<<attributeValue>>
+attributelink.flybase.Gene.7227.primaryIdentifier.text=FlyBase: <<attributeValue>>
+attributelink.flymine.Gene.7227.primaryIdentifier.url=http://www.flymine.org/query/portal.do?externalid=<<attributeValue>>&class=Gene
+attributelink.flymine.Gene.7227.primaryIdentifier.text=FlyMine
+attributelink.flymine.Gene.7227.primaryIdentifier.imageName=flymine_logo_link.gif
+
+# JBrowse links:
+# (insert here)
+
 # Header - these will populate the top right navigation
-#header.links=help,FAQ,about,cite,software
-#header.links.FAQ=http://trac.flymine.org/wiki/FlyMineFAQ
+#header.links=about,cite,release-updates
 #header.links.about=http://blog.flymine.org/?page_id=35
 #header.links.cite=http://blog.flymine.org/?page_id=37
-#header.links.help=http://blog.flymine.org/?page_id=45
-#header.links.software=http://blog.flymine.org/?page_id=39
 header.links=release-updates
 header.links.release-updates=releaseUpdates.do
 
@@ -47,8 +59,8 @@ theme = mine-theme
 
 # galaxy
 ## set to "false" to disable galaxy
-galaxy.display = true
-
+galaxy.display = false
+galaxy.disabledMessage = Galaxy export is disabled.
 
 ################ begin.jsp (homepage) config ################
 
@@ -60,14 +72,14 @@ begin.searchBox.description = Search Minename. Enter <strong>names</strong>, <st
 or <strong>keywords</strong> for genes, proteins, pathways, ontology terms, authors, etc. (e.g. \
 <em>eve</em>, HIPPO_DROME, glycolysis, <em>hb</em> allele).
 
-bag.example.identifiers.protein=Q8T3M3,FBpp0081318,FTZ_DROME
 # bag upload examples
 bag.example.identifiers=CG9151, FBgn0000099, CG3629, TfIIB, Mad, CG1775, CG2262, TWIST_DROME, \
 tinman, runt, E2f, CG8817, FBgn0010433, CG9786, CG1034, ftz, FBgn0024250, FBgn0001251, tll, \
 CG1374, CG33473, ato, so, CG16738, tramtrack,  CG2328, gt
+bag.example.identifiers.protein=Q8T3M3,FBpp0081318,FTZ_DROME
 
 # list upload box
-begin.listBox.title = Analyze
+begin.listBox.title = Quick List
 begin.listBox.description = Enter a <strong>list</strong> of identifiers.
 
 # third box
