--- a/dbmodel/resources/class_keys.properties
+++ b/dbmodel/resources/class_keys.properties
@@ -1,31 +1,39 @@
 # Specify keys for classes in the data model.  These define which types can be
 # stored in 'object' bags and are used for porting those bags to new releases.
 
-BioEntity = primaryIdentifier, secondaryIdentifier
-SequenceFeature = symbol, name
-Protein = primaryAccession
-OntologyTerm = identifier, name
-Organism = name, shortName, taxonid
-Publication = pubMedId
+# Remove classes not used in Mine:
+
+Analysis = source, organism
 Author = name
+AliasName = identifier
+BioEntity = primaryIdentifier, secondaryIdentifier
+BioProject = bioProjectUniqueId, organism
+BioSample = bioSampleId
+Consequence = snpId
+Experiment = experimentId
+Expression = entityName
 DataSource = name
 DataSet = name
-AliasName = identifier
-Consequence = snpId
-Entity = name
-Expression = entityName
+OntologyTerm = identifier, name
+Organism = name, shortName, taxonid
 Pathway = identifier
+Publication = pubMedId
+Protein = primaryAccession
+SequenceFeature = symbol, name
+Transcript = primaryIdentifier
 
 # keys used to generate permanent navigable URL and URI
 # primaryIdentifier is used as default values
+AliasName_URI = identifier
+BioProject_URI = bioProjectUniqueId
+BioSample_URI = bioSampleId
+Consequence_URI = snpId
 DataSource_URI = name
 DataSet_URI = name
-Protein_URI = primaryAccession
+Experiment_URI = experimentId
+Expression_URI = entityName
 OntologyTerm_URI = identifier
 Organism_URI = taxonId
-Publication_URI = pubMedId
-AliasName_URI = identifier
-Consequence_URI = snpId
-Entity_URI = name
-Expression_URI = entityName
 Pathway_URI = identifier
+Protein_URI = primaryAccession
+Publication_URI = pubMedId
