Adding more placeholders in dbmodel

--- a/dbmodel/resources/organism_config.properties
+++ b/dbmodel/resources/organism_config.properties
@@ -1,7 +1,7 @@
 # Additions to species list for our mines
 # Copy built-in version then place these additions at the top for the correct mine:
 
-# FAANGMine
+# FAANGMine species not included in default list
 
 taxon.89462.species = bubalis
 taxon.89462.genus = Bubalus
@@ -12,7 +12,7 @@ taxon.9796.genus = Equus
 taxon.9940.species = aries
 taxon.9940.genus = Ovis
 
-# MaizeMine
+# MaizeMine species not included in default list
 
 taxon.4528.species = longistaminata
 taxon.4528.genus = Oryza
