Updated geneStructureModel to use JBrowse variables from web.properties rather than have them hard-coded in

--- a/webapp/src/main/webapp/WEB-INF/web.properties
+++ b/webapp/src/main/webapp/WEB-INF/web.properties
@@ -39,7 +39,17 @@ attributelink.flymine.Gene.7227.primaryIdentifier.text=FlyMine
 attributelink.flymine.Gene.7227.primaryIdentifier.imageName=flymine_logo_link.gif
 
 # JBrowse links:
-# (insert here)
+# Update these per mine
+jbrowse.install.url=http://jbrowse-bgd.rnet.missouri.edu:8080/apollo-lsaa
+attributelink.JBrowse.Gene.*.primaryIdentifier.text= JBrowse: <<attributeValue>>
+attributelink.JBrowse.Transcript.*.primaryIdentifier.text= JBrowse: <<attributeValue>>
+attributelink.JBrowse.QTL.*.qtlId.text= JBrowse: <<attributeValue>>
+# For each org, specify Gene, Transcript, and QTL if applicable
+# Example:
+# B. taurus
+attributelink.JBrowse.Gene.9913.primaryIdentifier.url=http://jbrowse-bgd.rnet.missouri.edu:8080/apollo-lsaa/21/jbrowse/index.html?loc=<<attributeValue>>&tracks=DNA%2CAnnotations%2Crefseq_proteincoding%2Censembl_proteincoding
+attributelink.JBrowse.Transcript.9913.primaryIdentifier.url=http://jbrowse-bgd.rnet.missouri.edu:8080/apollo-lsaa/21/jbrowse/index.html?loc=<<attributeValue>>&tracks=DNA%2CAnnotations%2Crefseq_proteincoding%2Censembl_proteincoding
+attributelink.JBrowse.QTL.9913.qtlId.url=http://www.bovinegenome.org/Apollo2/21/jbrowse/index.html?loc=<<attributeValue>>&tracks=DNA%2CAnnotations%2Canimalqtldb
 
 # Header - these will populate the top right navigation
 #header.links=about,cite,release-updates
