Moved soClassName.properties out of mine dir, updated gene structure model to allow for multiple assemblies per org

--- a/webapp/src/main/webapp/WEB-INF/web.properties
+++ b/webapp/src/main/webapp/WEB-INF/web.properties
@@ -50,6 +50,11 @@ attributelink.JBrowse.QTL.*.qtlId.text= JBrowse: <<attributeValue>>
 attributelink.JBrowse.Gene.9913.primaryIdentifier.url=http://jbrowse-bgd.rnet.missouri.edu:8080/apollo-lsaa/21/jbrowse/index.html?loc=<<attributeValue>>&tracks=DNA%2CAnnotations%2Crefseq_proteincoding%2Censembl_proteincoding
 attributelink.JBrowse.Transcript.9913.primaryIdentifier.url=http://jbrowse-bgd.rnet.missouri.edu:8080/apollo-lsaa/21/jbrowse/index.html?loc=<<attributeValue>>&tracks=DNA%2CAnnotations%2Crefseq_proteincoding%2Censembl_proteincoding
 attributelink.JBrowse.QTL.9913.qtlId.url=http://www.bovinegenome.org/Apollo2/21/jbrowse/index.html?loc=<<attributeValue>>&tracks=DNA%2CAnnotations%2Canimalqtldb
+# If multiple assemblies per org, use this format instead of GeneStructureModel displayer
+# (won't show up on report pages as external links for multiple assemblies per org currently not supported)
+# Example:
+# Z. mays v5 assembly
+jbrowse.link.4577.Zm-B73-REFERENCE-NAM-5.0.url=http://jbrowse-maizemine.rnet.missouri.edu:8080/apollo/862/jbrowse/index.html?loc=<<attributeValue>>&tracks=DNA%2CAnnotations%2Crefseq_proteincoding%2CZm00001e.1_proteincoding
 
 # Header - these will populate the top right navigation
 #header.links=about,cite,release-updates
