Added bioFieldNames from maizemine

--- a/webapp/src/main/webapp/WEB-INF/bioFieldNames.properties
+++ b/webapp/src/main/webapp/WEB-INF/bioFieldNames.properties
@@ -46,17 +46,26 @@ organismPartUberonId=Organism Part UBERON Id
 organismPartUberonName=Organism Part UBERON Name
 pcrProduct=PCR Product
 physiologicalConditionOwlatolId=Physiological Condition owlATOL Id
+poName = Plant Ontology Term
 ptoName=PTO Name
 pubMedId=PubMed ID
 Pvalue=P-value
+qTellerId = qTeller ID
 qtlId=QTL Id
 rnaiResults=RNAi Results
 rnaiScreenHits=RNAi Screen Hits
 sexPatoId=Sex PATO Id
 SNPs=SNPs
+SNVs=SNVs
+sraBioProjectId = SRA BioProject ID
+sraBioSampleId = SRA BioSample ID
+sraExperimentId = SRA Experiment ID
+sraRunId = SRA Run ID
 sraSample=SRA Sample
-sraSubmission=SRA Submission
+sraSampleId = SRA Sample ID
+sraStudyId = SRA Study ID
 sraStudy=SRA Study
+sraSubmission=SRA Submission
 submissionDescriptionUberonId=Submission Description UBERON Id
 synonymUberonId=Synonym UBERON Id
 TFmodule=TF module
