--- a/webapp/src/main/webapp/WEB-INF/web.properties
+++ b/webapp/src/main/webapp/WEB-INF/web.properties
@@ -19,22 +19,22 @@ attributelink.PubMed.Publication.*.pubMedId.imageName=PubMed_logo_small.png
 attributelink.NCBI.Organism.*.taxonId.url=https://www.ncbi.nlm.nih.gov/Taxonomy/Browser/wwwtax.cgi?id=<<attributeValue>>
 attributelink.NCBI.Organism.*.taxonId.text=NCBI Taxonomy Browser: <<attributeValue>>
 
-attributelink.uniProt.Protein.*.uniprotAccession.url=http://www.uniprot.org/uniprot/<<attributeValue>>
+attributelink.uniProt.Protein.*.uniprotAccession.url=https://www.uniprot.org/uniprot/<<attributeValue>>
 attributelink.uniProt.Protein.*.uniprotAccession.text=uniprot: <<attributeValue>>
 attributelink.uniProt.Protein.*.uniprotAccession.imageName=uniprot_logo_link.jpeg
 
-attributelink.NCBI.Gene.*.primaryIdentifier.url=http://www.ncbi.nlm.nih.gov/gene/?term=<<attributeValue>>
+attributelink.NCBI.Gene.*.primaryIdentifier.url=https://www.ncbi.nlm.nih.gov/gene/?term=<<attributeValue>>
 attributelink.NCBI.Gene.*.primaryIdentifier.text=NCBI: <<attributeValue>>
 
-attributelink.NCBI.Transcript.*.primaryIdentifier.url=http://www.ncbi.nlm.nih.gov/nuccore/<<attributeValue>>
+attributelink.NCBI.Transcript.*.primaryIdentifier.url=https://www.ncbi.nlm.nih.gov/nuccore/<<attributeValue>>
 attributelink.NCBI.Transcript.*.primaryIdentifier.text=NCBI: <<attributeValue>>
 
-attributelink.miRBase.MiRNA.*.primaryIdentifier.url=http://www.mirbase.org/cgi-bin/mirna_entry.pl?acc=<<attributeValue>>
+attributelink.miRBase.MiRNA.*.primaryIdentifier.url=https://www.mirbase.org/cgi-bin/mirna_entry.pl?acc=<<attributeValue>>
 attributelink.miRBase.MiRNA.*.primaryIdentifier.text=miRBase: <<attributeValue>>
 
-attributelink.flybase.Gene.7227.primaryIdentifier.url=http://www.flybase.org/.bin/fbidq.html?<<attributeValue>>
+attributelink.flybase.Gene.7227.primaryIdentifier.url=https://identifiers.org/fb:<<attributeValue>>
 attributelink.flybase.Gene.7227.primaryIdentifier.text=FlyBase: <<attributeValue>>
-attributelink.flymine.Gene.7227.primaryIdentifier.url=http://www.flymine.org/query/portal.do?externalid=<<attributeValue>>&class=Gene
+attributelink.flymine.Gene.7227.primaryIdentifier.url=https://www.flymine.org/flymine/search?keyword==<<attributeValue>>
 attributelink.flymine.Gene.7227.primaryIdentifier.text=FlyMine
 attributelink.flymine.Gene.7227.primaryIdentifier.imageName=flymine_logo_link.gif
 
