Added extra bio field names from FAANGMine

--- a/webapp/src/main/webapp/WEB-INF/bioFieldNames.properties
+++ b/webapp/src/main/webapp/WEB-INF/bioFieldNames.properties
@@ -1,4 +1,7 @@
+bioProject=Bio-Project
 bioProjectId=Bio-Project Id
+bioProjectUniqueId=Bio-Project Unique Id
+bioSample=Bio-Sample
 bioSampleId=Bio-Sample Id
 bioSamplePools=Bio-Sample Pools
 bioSampleType=Bio-Sample Type
@@ -17,7 +20,7 @@ cvTerms=CV Terms
 cytoLocation=Cytological Location
 descriptionUberonId=Description UBERON Id
 developmentalStageEfoId=Developmental Stage EFO Id
-developmentalStageHsapdvId=Developmental Stage HSAPDV Id
+developmentalStageHsapdvId=Developmental Stage HsapDv Id
 developmentalStageUberonId=Developmental Stage UBERON Id
 ecNumber=EC Number
 environmentalConditionsOwleolId=Environmental Conditions owlEOL Id
@@ -69,6 +72,8 @@ sraSubmission=SRA Submission
 submissionDescriptionUberonId=Submission Description UBERON Id
 synonymUberonId=Synonym UBERON Id
 TFmodule=TF module
+uberonId=UBERON Id
+uberonName=UBERON Name
 uniprotAccession=UniProt Accession
 uniprotName=UniProt Name
 url=URL
