Adding BLAST property template

--- a/webapp/src/main/webapp/WEB-INF/web.properties
+++ b/webapp/src/main/webapp/WEB-INF/web.properties
@@ -130,6 +130,10 @@ begin.listsBox.description = You can run queries on whole lists of data. Create 
 or by uploading identifiers. Click on a list to view graphs and summaries in a list analysis page, if you log in \
 you can save lists permanently.
 
+# BLAST
+blast.display = false
+blast.url = 
+
 # Genomic Region Search
 genomicRegionSearch.display = true
 genomicRegionSearch.service =
