Added external links for OrthoDB, FAANG, AnimalQTLdb

--- a/webapp/src/main/webapp/WEB-INF/web.properties
+++ b/webapp/src/main/webapp/WEB-INF/web.properties
@@ -38,6 +38,34 @@ attributelink.flymine.Gene.7227.primaryIdentifier.url=https://www.flymine.org/fl
 attributelink.flymine.Gene.7227.primaryIdentifier.text=FlyMine
 attributelink.flymine.Gene.7227.primaryIdentifier.imageName=flymine_logo_link.gif
 
+# OrthoDB:
+attributelink.OrthoDB.Homologue.*.clusterId.url=https://www.orthodb.org/?query=<<attributeValue>>
+attributelink.OrthoDB.Homologue.*.clusterId.text=OrthoDB: <<attributeValue>>
+attributelink.OrthoDB.OrthologueCluster.*.primaryIdentifier.url=https://www.orthodb.org/?query=<<attributeValue>>
+attributelink.OrthoDB.OrthologueCluster.*.primaryIdentifier.text=OrthoDB: <<attributeValue>>
+
+# AnimalQTLdb:
+attributelink.AnimalQTLdb.QTL.*.qtlId.text=AnimalQTLdb: <<attributeValue>>
+attributelink.AnimalQTLdb.QTL.9913.qtlId.url=https://www.animalgenome.org/cgi-bin/QTLdb/BT/qdetails?QTL_ID=<<attributeValue>>
+attributelink.AnimalQTLdb.QTL.9925.qtlId.url=https://www.animalgenome.org/cgi-bin/QTLdb/CH/qdetails?QTL_ID=<<attributeValue>>
+attributelink.AnimalQTLdb.QTL.9796.qtlId.url=https://www.animalgenome.org/cgi-bin/QTLdb/EC/qdetails?QTL_ID=<<attributeValue>>
+attributelink.AnimalQTLdb.QTL.9031.qtlId.url=https://www.animalgenome.org/cgi-bin/QTLdb/GG/qdetails?QTL_ID=<<attributeValue>>
+attributelink.AnimalQTLdb.QTL.9940.qtlId.url=https://www.animalgenome.org/cgi-bin/QTLdb/OA/qdetails?QTL_ID=<<attributeValue>>
+attributelink.AnimalQTLdb.QTL.9823.qtlId.url=https://www.animalgenome.org/cgi-bin/QTLdb/SS/qdetails?QTL_ID=<<attributeValue>>
+
+# FAANG:
+attributelink.FAANG.BioSample.*.bioSampleId.url=https://data.faang.org/specimen/<<attributeValue>>
+attributelink.FAANG.BioSample.*.bioSampleId.text=FAANG: <<attributeValue>>
+attributelink.EMBLEBI.BioSample.*.bioSampleId.url=https://www.ebi.ac.uk/biosamples/samples/<<attributeValue>>
+attributelink.EMBLEBI.BioSample.*.bioSampleId.text=EMBL-EBI: <<attributeValue>>
+attributelink.FAANG.BioProject.*.bioProjectId.url=https://data.faang.org/dataset/<<attributeValue>>
+attributelink.FAANG.BioProject.*.bioProjectId.text=FAANG: <<attributeValue>>
+attributelink.EMBLEBI.BioProject.*.bioProjectId.url=https://www.ebi.ac.uk/ena/browser/view/<<attributeValue>>
+attributelink.EMBLEBI.BioProject.*.bioProjectId.text=EMBL-EBI: <<attributeValue>>
+# data.faang.org does not have consistent urls for experiments/runs
+attributelink.EMBLEBI.Experiment.*.experimentId.url=https://www.ebi.ac.uk/ena/browser/view/<<attributeValue>>
+attributelink.EMBLEBI.Experiment.*.experimentId.text=EMBL-EBI: <<attributeValue>>
+
 # JBrowse links:
 # Update these per mine
 jbrowse.install.url=http://jbrowse-bgd.rnet.missouri.edu:8080/apollo-lsaa
