Added InteractionExperiment class keys

--- a/dbmodel/resources/class_keys.properties
+++ b/dbmodel/resources/class_keys.properties
@@ -10,10 +10,11 @@ BioEntity = primaryIdentifier, secondaryIdentifier
 BioProject = bioProjectUniqueId, organism
 BioSample = bioSampleId
 Consequence = snpId
-Experiment = experimentId
-Expression = entityName
 DataSet = name
 DataSource = name
+Experiment = experimentId
+Expression = entityName
+InteractionExperiment = name, publication
 OntologyTerm = identifier, name
 Organism = name, shortName, taxonid
 Pathway = identifier
