Fixed typo in bioFieldNames.properties

--- a/webapp/src/main/webapp/WEB-INF/bioFieldNames.properties
+++ b/webapp/src/main/webapp/WEB-INF/bioFieldNames.properties
@@ -5,7 +5,7 @@ bioSample=Bio-Sample
 bioSampleId=Bio-Sample Id
 bioSamplePools=Bio-Sample Pools
 bioSampleType=Bio-Sample Type
-breedLboID=Breed LBO Id
+breedLboId=Breed LBO Id
 btoAllLevels=BTO All Levels
 btoId=BTO Id
 btoName=BTO Name
@@ -28,6 +28,7 @@ exceptionNote=Exception
 genbankIdentifier=GenBank Identifier
 goAnnotation=GO Annotation
 healthStatusAtCollectionHpId=Health Status At Collection HP Id
+healthStatusAtCollectionMondoId=Health Status At Collection MONDO Id
 healthStatusAtCollectionPatoId=Health Status At Collection PATO Id
 isUniprotCanonical=Is UniProt Canonical
 lboId=LBO Id
