Added external links for pathways

--- a/webapp/src/main/webapp/WEB-INF/web.properties
+++ b/webapp/src/main/webapp/WEB-INF/web.properties
@@ -44,6 +44,10 @@ attributelink.OrthoDB.Homologue.*.clusterId.text=OrthoDB: <<attributeValue>>
 attributelink.OrthoDB.OrthologueCluster.*.primaryIdentifier.url=https://www.orthodb.org/?query=<<attributeValue>>
 attributelink.OrthoDB.OrthologueCluster.*.primaryIdentifier.text=OrthoDB: <<attributeValue>>
 
+# Pathways (multiple sources):
+attributelink.PathwayLink.Pathway.*.url.url=<<attributeValue>>
+attributelink.PathwayLink.Pathway.*.url.text=Pathway browser
+
 # AnimalQTLdb:
 attributelink.AnimalQTLdb.QTL.*.qtlId.text=AnimalQTLdb: <<attributeValue>>
 attributelink.AnimalQTLdb.QTL.9913.qtlId.url=https://www.animalgenome.org/cgi-bin/QTLdb/BT/qdetails?QTL_ID=<<attributeValue>>
