Added field name for MaizeGDB-PanGene source, also changed instances of 'Id' to 'ID' for consistency

--- a/webapp/src/main/webapp/WEB-INF/bioFieldNames.properties
+++ b/webapp/src/main/webapp/WEB-INF/bioFieldNames.properties
@@ -1,41 +1,41 @@
 bioProject=Bio-Project
-bioProjectId=Bio-Project Id
-bioProjectUniqueId=Bio-Project Unique Id
+bioProjectId=Bio-Project ID
+bioProjectUniqueId=Bio-Project Unique ID
 bioSample=Bio-Sample
-bioSampleId=Bio-Sample Id
+bioSampleId=Bio-Sample ID
 bioSamplePools=Bio-Sample Pools
 bioSampleType=Bio-Sample Type
-breedLboId=Breed LBO Id
+breedLboId=Breed LBO ID
 btoAllLevels=BTO All Levels
-btoId=BTO Id
+btoId=BTO ID
 btoName=BTO Name
 btoTopLevel=BTO Top Level
 cDNAClones=cDNA clones
 CDSs=CDSs
-cellTypeClId=Cell Type CL Id
+cellTypeClId=Cell Type CL ID
 chipAntibody=ChIP Antibody
 cmoName=CMO Name
-cultureTypeBtoId=Culture Type BTO Id
+cultureTypeBtoId=Culture Type BTO ID
 cvTerms=CV Terms
 cytoLocation=Cytological Location
-descriptionUberonId=Description UBERON Id
-developmentalStageEfoId=Developmental Stage EFO Id
-developmentalStageHsapdvId=Developmental Stage HsapDv Id
-developmentalStageUberonId=Developmental Stage UBERON Id
+descriptionUberonId=Description UBERON ID
+developmentalStageEfoId=Developmental Stage EFO ID
+developmentalStageHsapdvId=Developmental Stage HsapDv ID
+developmentalStageUberonId=Developmental Stage UBERON ID
 ecNumber=EC Number
-environmentalConditionsOwleolId=Environmental Conditions owlEOL Id
+environmentalConditionsOwleolId=Environmental Conditions owlEOL ID
 exceptionNote=Exception
 genbankIdentifier=GenBank Identifier
 goAnnotation=GO Annotation
-healthStatusAtCollectionHpId=Health Status At Collection HP Id
-healthStatusAtCollectionMondoId=Health Status At Collection MONDO Id
-healthStatusAtCollectionPatoId=Health Status At Collection PATO Id
+healthStatusAtCollectionHpId=Health Status At Collection HP ID
+healthStatusAtCollectionMondoId=Health Status At Collection MONDO ID
+healthStatusAtCollectionPatoId=Health Status At Collection PATO ID
 isUniprotCanonical=Is UniProt Canonical
-lboId=LBO Id
+lboId=LBO ID
 lodScore=LOD Score
 lsMeans=LS Means
-materialObiId=Material OBI Id
-materialUberonId=Material UBERON Id
+materialObiId=Material OBI ID
+materialUberonId=Material UBERON ID
 md5checksum=MD5 Checksum
 MicroarrayResults=Microarray Results
 mirnagene=miRNA Gene
@@ -46,19 +46,20 @@ mrna=mRNA
 mRNAExpressionResults=mRNA Expression Results
 mRNAExpressionTerms=mRNA Expression Terms
 ncbiGeneNumber=NCBI Gene Number
-organismPartUberonId=Organism Part UBERON Id
+organismPartUberonId=Organism Part UBERON ID
 organismPartUberonName=Organism Part UBERON Name
+panGeneId=PanGene ID
 pcrProduct=PCR Product
-physiologicalConditionOwlatolId=Physiological Condition owlATOL Id
+physiologicalConditionOwlatolId=Physiological Condition owlATOL ID
 poName = Plant Ontology Term
 ptoName=PTO Name
 pubMedId=PubMed ID
 Pvalue=P-value
 qTellerId = qTeller ID
-qtlId=QTL Id
+qtlId=QTL ID
 rnaiResults=RNAi Results
 rnaiScreenHits=RNAi Screen Hits
-sexPatoId=Sex PATO Id
+sexPatoId=Sex PATO ID
 SNPs=SNPs
 SNVs=SNVs
 sraBioProjectId = SRA BioProject ID
@@ -70,10 +71,10 @@ sraSampleId = SRA Sample ID
 sraStudyId = SRA Study ID
 sraStudy=SRA Study
 sraSubmission=SRA Submission
-submissionDescriptionUberonId=Submission Description UBERON Id
-synonymUberonId=Synonym UBERON Id
+submissionDescriptionUberonId=Submission Description UBERON ID
+synonymUberonId=Synonym UBERON ID
 TFmodule=TF module
-uberonId=UBERON Id
+uberonId=UBERON ID
 uberonName=UBERON Name
 uniprotAccession=UniProt Accession
 uniprotName=UniProt Name
