Added external urls for GO annotation codes and transposable element insertion sites

--- a/webapp/src/main/webapp/WEB-INF/web.properties
+++ b/webapp/src/main/webapp/WEB-INF/web.properties
@@ -70,6 +70,15 @@ attributelink.EMBLEBI.BioProject.*.bioProjectId.text=EMBL-EBI: <<attributeValue>
 attributelink.EMBLEBI.Experiment.*.experimentId.url=https://www.ebi.ac.uk/ena/browser/view/<<attributeValue>>
 attributelink.EMBLEBI.Experiment.*.experimentId.text=EMBL-EBI: <<attributeValue>>
 
+# GO annotation codes:
+attributelink.GO.GOEvidenceCode.*.url.url=<<attributeValue>>
+attributelink.GO.GOEvidenceCode.*.url.text=geneontology.org
+
+# Maize Transposable Element Insertion Sites:
+# (GI identifier stored as secondaryIdentifier)
+attributelink.NCBIGI.TransposableElementInsertionSite.4577.secondaryIdentifier.url=https://www.ncbi.nlm.nih.gov/nuccore/<<attributeValue>>
+attributelink.NCBIGI.TransposableElementInsertionSite.4577.secondaryIdentifier.text=NCBI: <<attributeValue>>
+
 # JBrowse links:
 # Update these per mine
 jbrowse.install.url=http://jbrowse-bgd.rnet.missouri.edu:8080/apollo-lsaa
