Added external urls to NCBI SRA for Experiments

--- a/webapp/src/main/webapp/WEB-INF/web.properties
+++ b/webapp/src/main/webapp/WEB-INF/web.properties
@@ -69,6 +69,8 @@ attributelink.EMBLEBI.BioProject.*.bioProjectId.text=EMBL-EBI: <<attributeValue>
 # data.faang.org does not have consistent urls for experiments/runs
 attributelink.EMBLEBI.Experiment.*.experimentId.url=https://www.ebi.ac.uk/ena/browser/view/<<attributeValue>>
 attributelink.EMBLEBI.Experiment.*.experimentId.text=EMBL-EBI: <<attributeValue>>
+attributelink.NCBI.Experiment.*.experimentId.url=https://www.ncbi.nlm.nih.gov/sra/?term=<<attributeValue>>
+attributelink.NCBI.Experiment.*.experimentId.text=NCBI SRA: <<attributeValue>>
 
 # GO annotation codes:
 attributelink.GO.GOEvidenceCode.*.url.url=<<attributeValue>>
