Renamed 'PanGene' to 'Pangene' in source and config files

--- a/webapp/src/main/webapp/WEB-INF/bioFieldNames.properties
+++ b/webapp/src/main/webapp/WEB-INF/bioFieldNames.properties
@@ -48,7 +48,7 @@ mRNAExpressionTerms=mRNA Expression Terms
 ncbiGeneNumber=NCBI Gene Number
 organismPartUberonId=Organism Part UBERON ID
 organismPartUberonName=Organism Part UBERON Name
-panGeneId=PanGene ID
+pangeneId=Pangene ID
 pcrProduct=PCR Product
 physiologicalConditionOwlatolId=Physiological Condition owlATOL ID
 poName = Plant Ontology Term
