Updated OrthoDB loader to have an (optional) additional field for OrthoDB cluster ids for external links

--- a/webapp/src/main/webapp/WEB-INF/web.properties
+++ b/webapp/src/main/webapp/WEB-INF/web.properties
@@ -43,6 +43,12 @@ attributelink.OrthoDB.Homologue.*.clusterId.url=https://www.orthodb.org/?query=<
 attributelink.OrthoDB.Homologue.*.clusterId.text=OrthoDB: <<attributeValue>>
 attributelink.OrthoDB.OrthologueCluster.*.primaryIdentifier.url=https://www.orthodb.org/?query=<<attributeValue>>
 attributelink.OrthoDB.OrthologueCluster.*.primaryIdentifier.text=OrthoDB: <<attributeValue>>
+# OrthoDB (HymenopteraMine version):
+# HymenopteraMine uses separate field orthoDbCluster since it also loads HGD-ortho
+attributelink.OrthoDB.Homologue.*.orthoDbCluster.url=https://www.orthodb.org/?query=<<attributeValue>>
+attributelink.OrthoDB.Homologue.*.orthoDbCluster.text=OrthoDB: <<attributeValue>>
+attributelink.OrthoDB.OrthologueCluster.*.orthoDbCluster.url=https://www.orthodb.org/?query=<<attributeValue>>
+attributelink.OrthoDB.OrthologueCluster.*.orthoDbCluster.text=OrthoDB: <<attributeValue>>
 
 # Pathways (multiple sources):
 attributelink.PathwayLink.Pathway.*.url.url=<<attributeValue>>
