Added field name config for OrthoDB cluster

--- a/webapp/src/main/webapp/WEB-INF/bioFieldNames.properties
+++ b/webapp/src/main/webapp/WEB-INF/bioFieldNames.properties
@@ -48,6 +48,7 @@ mRNAExpressionTerms=mRNA Expression Terms
 ncbiGeneNumber=NCBI Gene Number
 organismPartUberonId=Organism Part UBERON ID
 organismPartUberonName=Organism Part UBERON Name
+orthoDbCluster=OrthoDB Cluster
 pangeneId=Pangene ID
 pcrProduct=PCR Product
 physiologicalConditionOwlatolId=Physiological Condition owlATOL ID
