Added field display name for SRA Metadata

--- a/webapp/src/main/webapp/WEB-INF/bioFieldNames.properties
+++ b/webapp/src/main/webapp/WEB-INF/bioFieldNames.properties
@@ -66,6 +66,7 @@ SNVs=SNVs
 sraBioProjectId = SRA BioProject ID
 sraBioSampleId = SRA BioSample ID
 sraExperimentId = SRA Experiment ID
+sraMetadata = SRA Metadata
 sraRunId = SRA Run ID
 sraSample=SRA Sample
 sraSampleId = SRA Sample ID
