Fixed typo in class name (taxonid -> taxonId)

--- a/dbmodel/resources/class_keys.properties
+++ b/dbmodel/resources/class_keys.properties
@@ -16,7 +16,7 @@ Experiment = experimentId
 Expression = entityName
 InteractionExperiment = name, publication
 OntologyTerm = identifier, name
-Organism = name, shortName, taxonid
+Organism = name, shortName, taxonId
 Pathway = identifier
 Publication = pubMedId
 Protein = primaryAccession
