Removed hyphens from BioProject, BioSample, etc. display names

--- a/webapp/src/main/webapp/WEB-INF/bioFieldNames.properties
+++ b/webapp/src/main/webapp/WEB-INF/bioFieldNames.properties
@@ -1,10 +1,10 @@
-bioProject=Bio-Project
-bioProjectId=Bio-Project ID
-bioProjectUniqueId=Bio-Project Unique ID
-bioSample=Bio-Sample
-bioSampleId=Bio-Sample ID
-bioSamplePools=Bio-Sample Pools
-bioSampleType=Bio-Sample Type
+bioProject=BioProject
+bioProjectId=BioProject ID
+bioProjectUniqueId=BioProject Unique ID
+bioSample=BioSample
+bioSampleId=BioSample ID
+bioSamplePools=BioSample Pools
+bioSampleType=BioSample Type
 breedLboId=Breed LBO ID
 btoAllLevels=BTO All Levels
 btoId=BTO ID
