Added human-readable field name for snpId -> SNP ID

--- a/webapp/src/main/webapp/WEB-INF/bioFieldNames.properties
+++ b/webapp/src/main/webapp/WEB-INF/bioFieldNames.properties
@@ -63,6 +63,7 @@ rnaiScreenHits=RNAi Screen Hits
 sexPatoId=Sex PATO ID
 SNPs=SNPs
 SNVs=SNVs
+snpId=SNP ID
 sraBioProjectId = SRA BioProject ID
 sraBioSampleId = SRA BioSample ID
 sraExperimentId = SRA Experiment ID
