Added display name for traitId field

--- a/webapp/src/main/webapp/WEB-INF/bioFieldNames.properties
+++ b/webapp/src/main/webapp/WEB-INF/bioFieldNames.properties
@@ -77,6 +77,7 @@ sraSubmission=SRA Submission
 submissionDescriptionUberonId=Submission Description UBERON ID
 synonymUberonId=Synonym UBERON ID
 TFmodule=TF module
+traitId=Trait ID
 uberonId=UBERON ID
 uberonName=UBERON Name
 uniprotAccession=UniProt Accession
