Added display name for clusterId field

--- a/webapp/src/main/webapp/WEB-INF/bioFieldNames.properties
+++ b/webapp/src/main/webapp/WEB-INF/bioFieldNames.properties
@@ -14,6 +14,7 @@ cDNAClones=cDNA clones
 CDSs=CDSs
 cellTypeClId=Cell Type CL ID
 chipAntibody=ChIP Antibody
+clusterId=Cluster ID
 cmoName=CMO Name
 cultureTypeBtoId=Culture Type BTO ID
 cvTerms=CV Terms
