Added external links to NCBI on report pages for pseudogene and pseudogenic ttranscripts

--- a/webapp/src/main/webapp/WEB-INF/web.properties
+++ b/webapp/src/main/webapp/WEB-INF/web.properties
@@ -25,9 +25,13 @@ attributelink.uniProt.Protein.*.uniprotAccession.imageName=uniprot_logo_link.jpe
 
 attributelink.NCBI.Gene.*.primaryIdentifier.url=https://www.ncbi.nlm.nih.gov/gene/?term=<<attributeValue>>
 attributelink.NCBI.Gene.*.primaryIdentifier.text=NCBI: <<attributeValue>>
+attributelink.NCBI.Pseudogene.*.primaryIdentifier.url=https://www.ncbi.nlm.nih.gov/gene/?term=<<attributeValue>>
+attributelink.NCBI.Pseudogene.*.primaryIdentifier.text=NCBI: <<attributeValue>>
 
 attributelink.NCBI.Transcript.*.primaryIdentifier.url=https://www.ncbi.nlm.nih.gov/nuccore/<<attributeValue>>
 attributelink.NCBI.Transcript.*.primaryIdentifier.text=NCBI: <<attributeValue>>
+attributelink.NCBI.PseudogenicTranscript.*.primaryIdentifier.url=https://www.ncbi.nlm.nih.gov/nuccore/<<attributeValue>>
+attributelink.NCBI.PseudogenicTranscript.*.primaryIdentifier.text=NCBI: <<attributeValue>>
 
 attributelink.miRBase.MiRNA.*.primaryIdentifier.url=https://www.mirbase.org/cgi-bin/mirna_entry.pl?acc=<<attributeValue>>
 attributelink.miRBase.MiRNA.*.primaryIdentifier.text=miRBase: <<attributeValue>>
@@ -99,6 +103,8 @@ attributelink.JBrowse.QTL.*.qtlId.text= JBrowse: <<attributeValue>>
 attributelink.JBrowse.Gene.9913.primaryIdentifier.url=http://jbrowse-bgd.rnet.missouri.edu:8080/apollo-lsaa/21/jbrowse/index.html?loc=<<attributeValue>>&tracks=DNA%2CAnnotations%2Crefseq_proteincoding%2Censembl_proteincoding
 attributelink.JBrowse.Transcript.9913.primaryIdentifier.url=http://jbrowse-bgd.rnet.missouri.edu:8080/apollo-lsaa/21/jbrowse/index.html?loc=<<attributeValue>>&tracks=DNA%2CAnnotations%2Crefseq_proteincoding%2Censembl_proteincoding
 attributelink.JBrowse.QTL.9913.qtlId.url=http://www.bovinegenome.org/Apollo2/21/jbrowse/index.html?loc=<<attributeValue>>&tracks=DNA%2CAnnotations%2Canimalqtldb
+attributelink.JBrowse.Pseudogene.9913.primaryIdentifier.url=http://jbrowse-bgd.rnet.missouri.edu:8080/apollo-lsaa/21/jbrowse/index.html?loc=<<attributeValue>>&tracks=DNA%2CAnnotations%2Crefseq_pseudogenes%2Censembl_pseudogenes
+
 # If multiple assemblies per org, use this format instead of GeneStructureModel displayer
 # (won't show up on report pages as external links for multiple assemblies per org currently not supported)
 # Example:
