Updated organism_config.properties for HymenopteraMine

--- a/dbmodel/resources/organism_config.properties
+++ b/dbmodel/resources/organism_config.properties
@@ -12,6 +12,239 @@ taxon.9796.genus = Equus
 taxon.9940.species = aries
 taxon.9940.genus = Ovis
 
+# HymenopteraMine species not included in default list
+
+taxon.103372.genus = Acromyrmex
+taxon.103372.species = echinatior
+taxon.76990.genus = Ancistrocerus
+taxon.76990.species = nigricornis
+taxon.1411666.genus = Andrena
+taxon.1411666.species = dorsata
+taxon.444401.genus = Andrena
+taxon.444401.species = haemorrhoa
+taxon.1190802.genus = Andrena
+taxon.1190802.species = minutula
+taxon.1667466.genus = Anoplius
+taxon.1667466.species = nigerrimus
+taxon.684658.genus = Aphidius
+taxon.684658.species = gifuensis
+taxon.7461.genus = Apis
+taxon.7461.species = cerana
+taxon.7462.genus = Apis
+taxon.7462.species = dorsata
+taxon.7463.genus = Apis
+taxon.7463.species = florea
+taxon.183418.genus = Apis
+taxon.183418.species = laboriosa
+taxon.37344.genus = Athalia
+taxon.37344.species = rosae
+taxon.12957.genus = Atta
+taxon.12957.species = cephalotes
+taxon.520822.genus = Atta
+taxon.520822.species = colombica
+taxon.2817044.genus = Belonocnema
+taxon.2817044.species = kinseyi
+taxon.103933.genus = Bombus
+taxon.103933.species = bifarius
+taxon.395515.genus = Bombus
+taxon.395515.species = breviceps
+taxon.207624.genus = Bombus
+taxon.207624.species = campestris
+taxon.217217.genus = Bombus
+taxon.217217.species = confusus
+taxon.130686.genus = Bombus
+taxon.130686.species = consobrinus
+taxon.2562068.genus = Bombus
+taxon.2562068.species = cullumanus
+taxon.395520.genus = Bombus
+taxon.395520.species = difficillimus
+taxon.207636.genus = Bombus
+taxon.207636.species = haemorrhoidalis
+taxon.85660.genus = Bombus
+taxon.85660.species = hortorum
+taxon.30191.genus = Bombus
+taxon.30191.species = hypnorum
+taxon.132113.genus = Bombus
+taxon.132113.species = impatiens
+taxon.2024865.genus = Bombus
+taxon.2024865.species = opulentus
+taxon.65598.genus = Bombus
+taxon.65598.species = pascuorum
+taxon.309970.genus = Bombus
+taxon.309970.species = picipes
+taxon.130708.genus = Bombus
+taxon.130708.species = polaris
+taxon.30194.genus = Bombus
+taxon.30194.species = pratorum
+taxon.396416.genus = Bombus
+taxon.396416.species = pyrosoma
+taxon.421273.genus = Bombus
+taxon.421273.species = sibiricus
+taxon.395565.genus = Bombus
+taxon.395565.species = skorikovi
+taxon.184059.genus = Bombus
+taxon.184059.species = soroeensis
+taxon.1869276.genus = Bombus
+taxon.1869276.species = superbus
+taxon.30201.genus = Bombus
+taxon.30201.species = sylvestris
+taxon.30195.genus = Bombus
+taxon.30195.species = terrestris
+taxon.686820.genus = Bombus
+taxon.686820.species = turneri
+taxon.2705178.genus = Bombus
+taxon.2705178.species = vancouverensis
+taxon.207650.genus = Bombus
+taxon.207650.species = vosnesenskii
+taxon.395577.genus = Bombus
+taxon.395577.species = waltoni
+taxon.104421.genus = Camponotus
+taxon.104421.species = floridanus
+taxon.286306.genus = Cardiocondyla
+taxon.286306.species = obscurior
+taxon.211228.genus = Cephus
+taxon.211228.species = cinctus
+taxon.156304.genus = Ceratina
+taxon.156304.species = calcarata
+taxon.326594.genus = Ceratosolen
+taxon.326594.species = solmsi
+taxon.1167272.genus = Cerceris
+taxon.1167272.species = rybyensis
+taxon.460826.genus = Chelonus
+taxon.460826.species = insularis
+taxon.935657.genus = Colletes
+taxon.935657.species = gigas
+taxon.29053.genus = Copidosoma
+taxon.29053.species = floridanum
+taxon.32391.genus = Cotesia
+taxon.32391.species = glomerata
+taxon.456900.genus = Cyphomyrmex
+taxon.456900.species = costatus
+taxon.454923.genus = Diachasma
+taxon.454923.species = alloeum
+taxon.609295.genus = Dinoponera
+taxon.609295.species = quadriceps
+taxon.362088.genus = Diprion
+taxon.362088.species = similis
+taxon.881891.genus = Dolichovespula
+taxon.881891.species = media
+taxon.85443.genus = Dolichovespula
+taxon.85443.species = saxonica
+taxon.178035.genus = Dufourea
+taxon.178035.species = novaeangliae
+taxon.1126389.genus = Ectemnius
+taxon.1126389.species = continuus
+taxon.2495015.genus = Ectemnius
+taxon.2495015.species = lituratus
+taxon.516756.genus = Eufriesea
+taxon.516756.species = mexicana
+taxon.64838.genus = Fopius
+taxon.64838.species = arisanus
+taxon.72781.genus = Formica
+taxon.72781.species = exsecta
+taxon.561572.genus = Frieseomelitta
+taxon.561572.species = varia
+taxon.597456.genus = Habropoda
+taxon.597456.species = laboriosa
+taxon.610380.genus = Harpegnathos
+taxon.610380.species = saltator
+taxon.2795680.genus = Ichneumon
+taxon.2795680.species = xanthorius
+taxon.88501.genus = Lasioglossum
+taxon.88501.species = albipes
+taxon.88531.genus = Lasioglossum
+taxon.88531.species = lativentre
+taxon.88514.genus = Lasioglossum
+taxon.88514.species = morio
+taxon.63436.genus = Leptopilina
+taxon.63436.species = heterotoma
+taxon.83485.genus = Linepithema
+taxon.83485.species = humile
+taxon.253715.genus = Macropis
+taxon.253715.species = europaea
+taxon.143995.genus = Megachile
+taxon.143995.species = rotundata
+taxon.115081.genus = Megalopta
+taxon.115081.species = genalis
+taxon.166423.genus = Melipona
+taxon.166423.species = quadrifasciata
+taxon.69319.genus = Microplitis
+taxon.69319.species = demolitor
+taxon.307658.genus = Monomorium
+taxon.307658.species = pharaonis
+taxon.7425.genus = Nasonia
+taxon.7425.species = vitripennis
+taxon.2872261.genus = Neodiprion
+taxon.2872261.species = fabricii
+taxon.441921.genus = Neodiprion
+taxon.441921.species = lecontei
+taxon.441929.genus = Neodiprion
+taxon.441929.species = pinetum
+taxon.2961670.genus = Neodiprion
+taxon.2961670.species = virginianus
+taxon.601510.genus = Nomada
+taxon.601510.species = fabriciana
+taxon.2448451.genus = Nomia
+taxon.2448451.species = melanderi
+taxon.613905.genus = Nylanderia
+taxon.613905.species = fulva
+taxon.2495127.genus = Nysson
+taxon.2495127.species = spinosus
+taxon.486640.genus = Odontomachus
+taxon.486640.species = brunneus
+taxon.2015173.genus = Ooceraea
+taxon.2015173.species = biroi
+taxon.222816.genus = Orussus
+taxon.222816.species = abietinus
+taxon.1437191.genus = Osmia
+taxon.1437191.species = bicornis
+taxon.473952.genus = Osmia
+taxon.473952.species = lignaria
+taxon.144034.genus = Pogonomyrmex
+taxon.144034.species = barbatus
+taxon.91411.genus = Polistes
+taxon.91411.species = canadensis
+taxon.743375.genus = Polistes
+taxon.743375.species = dominula
+taxon.30207.genus = Polistes
+taxon.30207.species = fuscatus
+taxon.219809.genus = Pseudomyrmex
+taxon.219809.species = gracilis
+taxon.115100.genus = Seladonia
+taxon.115100.species = tumulorum
+taxon.13686.genus = Solenopsis
+taxon.13686.species = invicta
+taxon.1190790.genus = Sphecodes
+taxon.1190790.species = monilicornis
+taxon.300111.genus = Temnothorax
+taxon.300111.species = curvispinosus
+taxon.471704.genus = Trachymyrmex
+taxon.471704.species = cornetzi
+taxon.34720.genus = Trachymyrmex
+taxon.34720.species = septentrionalis
+taxon.64791.genus = Trachymyrmex
+taxon.64791.species = zeteki
+taxon.7493.genus = Trichogramma
+taxon.7493.species = pretiosum
+taxon.32260.genus = Venturia
+taxon.32260.species = canescens
+taxon.7445.genus = Vespa
+taxon.7445.species = crabro
+taxon.7446.genus = Vespa
+taxon.7446.species = mandarinia
+taxon.202808.genus = Vespa
+taxon.202808.species = velutina
+taxon.30212.genus = Vespula
+taxon.30212.species = germanica
+taxon.30213.genus = Vespula
+taxon.30213.species = pensylvanica
+taxon.7454.genus = Vespula
+taxon.7454.species = vulgaris
+taxon.411798.genus = Vollenhovia
+taxon.411798.species = emeryi
+taxon.64793.genus = Wasmannia
+taxon.64793.species = auropunctata
+
 # MaizeMine species not included in default list
 
 taxon.4528.species = longistaminata
